crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select sp_test_func() order by 1;
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..19 "sp_test_func"
  Ascii40@19..20 "("
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  SortBy@22..32
    Order@22..27 "order"
    Whitespace@27..28 " "
    By@28..30 "by"
    Whitespace@30..31 " "
    AConst@31..32
      Iconst@31..32 "1"
  Ascii59@32..33 ";"

