crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from tenk1 where stringu1 = 'GRAAAA';"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..26
    Ident@21..26 "tenk1"
  Whitespace@26..27 " "
  Where@27..32 "where"
  Whitespace@32..33 " "
  AExpr@33..52
    ColumnRef@33..41
      Ident@33..41 "stringu1"
    Whitespace@41..42 " "
    Ascii61@42..43 "="
    Whitespace@43..44 " "
    AConst@44..52
      Sconst@44..52 "'GRAAAA'"
  Ascii59@52..53 ";"

