crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select length(stringu1) from tenk1 group by length(stringu1);
---
SelectStmt@0..61
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..22
      Ident@7..13 "length"
      Ascii40@13..14 "("
      ColumnRef@14..22
        Ident@14..22 "stringu1"
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  From@24..28 "from"
  Whitespace@28..29 " "
  RangeVar@29..34
    Ident@29..34 "tenk1"
  Whitespace@34..35 " "
  GroupP@35..40 "group"
  Whitespace@40..41 " "
  By@41..43 "by"
  Whitespace@43..44 " "
  FuncCall@44..59
    Ident@44..50 "length"
    Ascii40@50..51 "("
    ColumnRef@51..59
      Ident@51..59 "stringu1"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

