crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from tenk1\n    where tenk1.unique1 = (Select max(tenk2.unique1) from tenk2);"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..26
    Ident@21..26 "tenk1"
  Newline@26..27 "\n"
  Whitespace@27..31 "    "
  Where@31..36 "where"
  Whitespace@36..37 " "
  AExpr@37..90
    ColumnRef@37..50
      Ident@37..42 "tenk1"
      Ascii46@42..43 "."
      Ident@43..50 "unique1"
    Whitespace@50..51 " "
    Ascii61@51..52 "="
    Whitespace@52..53 " "
    SubLink@53..90
      SelectStmt@53..90
        Ascii40@53..54 "("
        Select@54..60 "Select"
        Whitespace@60..61 " "
        ResTarget@61..78
          FuncCall@61..78
            Ident@61..64 "max"
            Ascii40@64..65 "("
            ColumnRef@65..78
              Ident@65..70 "tenk2"
              Ascii46@70..71 "."
              Ident@71..78 "unique1"
        Ascii41@78..79 ")"
        Whitespace@79..80 " "
        From@80..84 "from"
        Whitespace@84..85 " "
        RangeVar@85..90
          Ident@85..90 "tenk2"
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

