crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_bitmapscan to off;
---
VariableSetStmt@0..29
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..21 "enable_bitmapscan"
  Whitespace@21..22 " "
  To@22..24 "to"
  Whitespace@24..25 " "
  AConst@25..28
    Off@25..28 "off"
  Ascii59@28..29 ";"

