crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select  count((unique1)) from tenk1 where hundred > 1;
---
SelectStmt@0..54
  Select@0..6 "select"
  Whitespace@6..8 "  "
  ResTarget@8..22
    FuncCall@8..22
      Ident@8..13 "count"
      Ascii40@13..14 "("
      Ascii40@14..15 "("
      ColumnRef@15..22
        Ident@15..22 "unique1"
  Ascii41@22..23 ")"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  From@25..29 "from"
  Whitespace@29..30 " "
  RangeVar@30..35
    Ident@30..35 "tenk1"
  Whitespace@35..36 " "
  Where@36..41 "where"
  Whitespace@41..42 " "
  AExpr@42..53
    ColumnRef@42..49
      Ident@42..49 "hundred"
    Whitespace@49..50 " "
    Ascii62@50..51 ">"
    Whitespace@51..52 " "
    AConst@52..53
      Iconst@52..53 "1"
  Ascii59@53..54 ";"

